--- a/Actividad3/c/estilos.css
+++ b/Actividad3/c/estilos.css
@@ -2,8 +2,20 @@
     width: 300px;
     height: 300px;
     background-color: blue;
+    color: white;
+    margin: 3px;
+    display: inline-block;
 }
 #titulo{
     background-color: rgb(0, 0, 77);
     color: white;
+    border-bottom: dotted white 1px;
+}
+#titulo:hover{
+    background-color: yellowgreen;
+    
+}
+a{
+    color: white;
+    text-decoration: none;
 }
