--- a/PracticaU2/style.css
+++ b/PracticaU2/style.css
@@ -1,28 +1,28 @@
-body, html{
-    margin: 0;
+html, body{
+    height: 100%;
     width: 100%;
+    position: absolute;
+    margin: 0px;
+    padding: 0px;
+
 }
 .cabecera{
-    position: absolute;
-    border: solid 1px black;
+    position: sticky;
+    height: 15%;
     width: 100%;
-    height: 10%;
-    background-color: rgb(78, 78, 78);
+    border: solid 1px black;
 }
-
 li{
-    position: relative;
-    float: right;
-    margin-right: 30px;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
     text-decoration: none;
     display: inline-block;
-    padding: 30px;
-    position: relative;
-    font-family: 'Nunito';
-    transform: translate(-50%, -50%);
-    padding-top: 7% ;
-    font-size: 30px;
-    color: white;
-    
+    align-content: center;
 
+}
+#menu{
+    position: relative;
+    float: right;
+    top: 50px;
 }
