--- a/PracticaU2/style.css
+++ b/PracticaU2/style.css
@@ -13,7 +13,7 @@ html, body{
     top: 0px;
     height: 15%;
     width: 100%;
-    background-color:#F5F5F5;
+    background-color:rgba(245, 245, 245, 0.9);
     color: whitesmoke;
 }
 ul{
