--- a/PracticaU2/style.css
+++ b/PracticaU2/style.css
@@ -8,10 +8,10 @@ html, body{
 
 }
 .cabecera{
-    position: -webkit-sticky;
+    
     position: sticky;
     top: 0px;
-    height: 15%;
+    height: 10%;
     width: 100%;
     background-color:rgba(245, 245, 245, 0.9);
     color: whitesmoke;
@@ -53,17 +53,31 @@ a:hover{
 
 }
 .seccion1{
-    width: 100%;
+    width: 80%;
+    margin: 0 auto;
 }
 #imagen1{
     float: left;
-    width: 20%;
+    width: 50%;
 }
 #texto1{
+    padding-top:20%;
     float: right;
-    width: 20%;
+    width: 50%;
+    color:#757575;
+    font-size:6EM;
+    font-family: 'Big Shoulders Text', cursive;
 }
 #imagen1 img{
     width: 100%;
     left: 30px;
+}
+#texto1 span{
+    color: #fd5d00;
+}
+#seccion2{
+    width: 100%;
+    height: 500px;
+    background-color: rgb(29, 29, 29);
+    margin: 0 auto;
 }
