--- a/PracticaU2/style.css
+++ b/PracticaU2/style.css
@@ -174,7 +174,7 @@ header{
 }
 .seccion3 .tituloSec3{
     color: whitesmoke;
-    font-family: 'Annie Use Your Telescope';
+    font-family: 'Waiting for the Sunrise', cursive;
     
     margin-bottom: 140px;
     font-size: 4em;
