--- a/PracticaU2/style.css
+++ b/PracticaU2/style.css
@@ -9,7 +9,7 @@ body{
 .fondo3{
     position: absolute;
     z-index: -1;
-    top: 60px;
+    top: 15px;
     right: 0;
 
 }
@@ -66,7 +66,8 @@ header{
 .seccion1{
     width: 100%;
     height: 540px;
-    padding-top: 80px;
+    padding-top: 50px;
+    position: relative;
     
     
 }
@@ -86,7 +87,8 @@ header{
 .foto1 img{
     position: absolute;
     right: 30px;
-    bottom: 89px;
+    top: 20px;
+    transition: 0.5s;
 }
 
 /* SEGUNDA SECCION */
