--- a/UT2-Proyecto/estilo.css
+++ b/UT2-Proyecto/estilo.css
@@ -150,7 +150,7 @@ html, body{
     width: 0;
     transition: .5s ease-in-out;
     opacity: 0;
-    background-color:rgba(0, 0, 0, 0.26);
+    background-color:rgba(0, 0, 0, 0.418);
 }
 .imagenB3:hover .capa{
     width: 100%;
@@ -166,4 +166,43 @@ html, body{
     font-size: 70px;
     color: white;
     font-family: 'Titillium Web', sans-serif;
+}
+
+/* FOOTER */
+.footer{
+    height: 200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(37, 37, 37);
+    color: whitesmoke;
+    padding-left: 10%;
+}
+.creador{
+    width: auto;
+    margin-left: 10%;
+    font-size: 20px;
+    color: whitesmoke;
+}
+.redes{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: 100%;
+    justify-content: space-around;
+    align-items: flex-end;
+    margin-right: 5%;
+}
+#iconoRedes{
+    color: whitesmoke;
+    font-size: 40px;
+}
+#titulo{
+    font-size: 30px;
+    color: white;
+    font-weight: bolder;
+}
+.creador, .servicios, .localizacion{
+    width: 25%;
 }
