--- a/Trimestre 2/PaginaBootstrap/style.css
+++ b/Trimestre 2/PaginaBootstrap/style.css
@@ -5,6 +5,7 @@ html, body{
     padding: 0;
     background-color: #f7f7f7;
     height: 1000px;
+    cursor: none;
 }
 
 .btn:hover{
@@ -15,23 +16,17 @@ html, body{
 .logo{
     width: 90px;
 }
-.nav-link:hover{
-    color: #e539b1 !important;
-}
+
 .spanRosa{
     color: #e539b1;
 }
 .textoGrande{
     font-size: 80px;
 }
-.menu{
-    z-index: 1;
-    background-color: #f7f7f7 !important ; 
-    
-}
-.lupa:hover{
-    color: #e539b1;
-}
+
+
+
+
 .seccion1izq{
     background-color: #feb6b9;
     
@@ -49,7 +44,7 @@ html, body{
 .seccion1{
     height: 100vh;
 }
-.cursor {
+.escritura {
   
     animation-name: parpadeo;
     animation-duration: 0.2s;
@@ -63,5 +58,36 @@ html, body{
   }
 @keyframes parpadeo {  
     50% { opacity: 0.0; }
-  }
+}
+
+/* CURSOR PERSONALIZADO */
+
+.cursor{
+    width: 1rem;
+    height: 1rem;
+    border: 2px solid #feb6b9;;
+    border-radius: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    transition: .3s all ease;
+    transition-property: background, transform;
+    transform-origin: 60% 60% ;
+    z-index: 1;
+    
+}
+.nav-item{
+    z-index: 3;
+}
+.link-crece{
+    transform: scale(5);
+    background-color: #feb6b9;;
+}
+.hovered-link{
+    color: white !important;
+    
+}
+.nav-item{
+    transition: .5s all ease;
+}
 
