--- a/Trimestre 2/PaginaBootstrap/style.css
+++ b/Trimestre 2/PaginaBootstrap/style.css
@@ -26,7 +26,7 @@ html, body{
 }
 .menu{
     z-index: 1;
-    background-color: #f7f7f7 !important ; 
+    background-color: #f7f7f783 !important ; 
     
 }
 .lupa:hover{
