--- a/Trimestre 2/PaginaBootstrap/style.css
+++ b/Trimestre 2/PaginaBootstrap/style.css
@@ -8,11 +8,15 @@ html, body{
     font-family: 'Nanum Gothic', sans-serif;
 }
 
+.btn{
+    background-color: #bbded7;
+    width: 100%;
 
+}
 .btn:hover{
-    border-color: #e539b1;
     color: white;
-    background-color: #e081c4;
+    background-color: #61bfbf;
+
 }
 .logo{
     
@@ -28,6 +32,7 @@ html, body{
 
 .menu{
     height: 15vh;
+    box-shadow: 0px 2px 35px -19px rgba(0,0,0,0.75);
 }
 
 
@@ -188,4 +193,9 @@ box-shadow: 12px 20px 39px -15px rgba(0,0,0,0.75);
     padding-right: 10em;
     transition: .3s all ease;
 }
+
+.form-control:focus {
+    border-color: #61bfbf;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #61bfbf;
+  }
 
