--- a/Trimestre 2/PaginaBootstrap/style.css
+++ b/Trimestre 2/PaginaBootstrap/style.css
@@ -4,8 +4,11 @@ html, body{
     margin: 0;
     padding: 0;
     height: auto;
-    /*cursor: none;*/
+    cursor: none;
     font-family: 'Nanum Gothic', sans-serif;
+}
+input, textArea, button{
+    cursor: none !important;
 }
 
 .btn{
@@ -199,3 +202,10 @@ box-shadow: 12px 20px 39px -15px rgba(0,0,0,0.75);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #61bfbf;
   }
 
+  .titulo{
+    font-size: 280%;
+    font-family: 'Dancing Script', !important; 
+    color: #feb6b9;
+    text-align: center;
+    margin: 2% 2%;
+  }
