--- a/Trimestre 2/PaginaBootstrap/style.css
+++ b/Trimestre 2/PaginaBootstrap/style.css
@@ -7,13 +7,17 @@ html, body{
     cursor: none;
     font-family: 'Nanum Gothic', sans-serif;
 }
-.seccion1, .seccion2, .seccion3, .seccion4{
-    height: 100vh !important;
+.seccion1{
+    height: 50vh !important;
     width: 100vw !important;
 }
-input, textArea, button{
+input, textArea, button, p{
     cursor: none !important;
 }
+.subtitulo{
+    font-size: 3.2vw;
+}
+
 
 .btn{
     background-color: #bbded7;
@@ -157,11 +161,13 @@ input, textArea, button{
     transition: 1s all ease;
 }
 .footer{
+    color: white;
     background-color: #61bfbf;
-    height: 30vh;
+    height: auto;
     width: auto;
     display: flex;
     justify-content: center;
+    padding-bottom: 60px;
 }
 
 .iconos{
@@ -204,13 +210,26 @@ box-shadow: 12px 20px 39px -15px rgba(0,0,0,0.75);
 
 .form-control:focus {
     border-color: #61bfbf;
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #61bfbf;
-  }
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #61bfbf; 
+}
 
-  .titulo{
-    font-size: 280%;
-    font-family: 'Dancing Script', !important; 
+.titulo{
+font-size: 280%;
+font-family: 'Dancing Script', !important; 
+color: #feb6b9;
+text-align: center;
+margin: 2% 2%;
+}
+.fa-times{
     color: #feb6b9;
-    text-align: center;
-    margin: 2% 2%;
-  }
+}
+.fa-check{
+    color: #61bfbf;
+    
+}
+th, td{
+    text-align: center !important;
+}
+.carousel-control-prev, .carousel-control-next{
+    cursor: none;
+}
