--- a/ProyectoFInal/style.css
+++ b/ProyectoFInal/style.css
@@ -6,19 +6,25 @@ html, body{
     width: 100vw;
 }
 
-.home{
+.home, .artistas{
     height: 100vh;
     width: 100vw;
 }
-.pagina1{
+.pagina1, .pagina2{
     height: 100%;
 }
-.homeIzquierda, .homeDerecha{
+.pagina2{
+    background-image: url(./img/homeDerecha.png);
+}
+.homeIzquierda, .homeDerecha, .section2{
    background-color: rgb(233, 233, 233);
    color: white;
 }
 .homeDerecha{
     background-image: url(./img/homeDerecha.png);
+    background-size: cover;
+    height: 100%;
+    width: 100% ;
 }
 
 .hamburger {
@@ -123,6 +129,27 @@ html, body{
 .letras{
     font-size: 50px;
 }
+.imgTitulo{
+    position: relative;
+    opacity: 0.5;
+}
+/*###############################################*/
+/*CARRUSEL*/
+/*###############################################*/
 
 
-
+@media screen and (max-width: 640px) {
+    .foto{
+        width: 100vw;
+    }
+}
+@media screen and (max-width: 1024px) and (min-width: 640px) {
+    .foto{
+        width: 90vw;
+    }
+}
+@media screen and (min-width: 1024px) {
+    .foto{
+        width: 60vw;
+    }
+}
